--- a/css/master.css
+++ b/css/master.css
@@ -23,6 +23,18 @@ ul {
   list-style: none;
   padding: 0;
 }
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background-color: white;
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--blue-color);
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--blue-alt-color);
+}
 .page {
   background-color: #f1f5f9;
   min-height: 100vh;
@@ -164,5 +176,24 @@ ul {
   width: 32px;
   height: 32px;
   margin-left: 15px;
+}
+.page h1 {
+  margin: 20px 20px 40px;
+}
+.page h1::before,
+.page h1::after {
+  content: "";
+  height: 3px;
+  position: absolute;
+  bottom: -10px;
+  left: 0;
+}
+.page h1::before {
+  background-color: white;
+  width: 120px;
+}
+.page h1::after {
+  background-color: black;
+  width: 40px;
 }
 /* End Content */
