--- a/css/framework.css
+++ b/css/framework.css
@@ -13,15 +13,24 @@
 .align-center {
   align-items: center;
 }
+.space-between {
+  justify-content: space-between;
+}
 .d-grid {
   display: grid;
 }
 .gap-20 {
   gap: 20px;
 }
+.d-block {
+  display: block;
+}
 @media (max-width: 767px) {
   .block-mobile {
     display: block;
+  }
+  .hide-mobile {
+    display: none;
   }
 }
 /* End Box */
@@ -35,19 +44,46 @@
 .p-20 {
   padding: 20px;
 }
+.m-0 {
+  margin: 0;
+}
 .m-20 {
   margin: 20px;
 }
 .mt-0 {
   margin-top: 0;
 }
+.mt-5 {
+  margin-top: 5px;
+}
+.mt-10 {
+  margin-top: 10px;
+}
+.mt-20 {
+  margin-top: 20px;
+}
+.mb-20 {
+  margin-bottom: 20px;
+}
 /* End Padding + Margin */
 /* Start Color */
 .bg-white {
   background-color: white;
 }
+.bg-eee {
+  background-color: #eee;
+}
+.bg-blue {
+  background-color: var(--blue-color);
+}
+.c-white {
+  color: white;
+}
 .c-black {
   color: black;
+}
+.c-grey {
+  color: var(--grey-color);
 }
 /* End Color */
 /* Start Position */
@@ -87,6 +123,9 @@
 /* Start Width + Height */
 .w-full {
   width: 100%;
+}
+.w-fit {
+  width: fit-content;
 }
 /* End Width + Height */
 /* Start Components */
