Dashboard Page - Quick Draft

--- a/css/framework.css
+++ b/css/framework.css
@@ -62,6 +62,9 @@
 .mt-20 {
   margin-top: 20px;
 }
+.mb-10 {
+  margin-bottom: 10px;
+}
 .mb-20 {
   margin-bottom: 20px;
 }
@@ -98,6 +101,9 @@
 .fs-14 {
   font-size: 14px;
 }
+.fs-15 {
+  font-size: 15px;
+}
 @media (max-width: 767px) {
   .txt-c-mobile {
     text-align: center;
@@ -105,6 +111,9 @@
 }
 /* End Font */
 /* Start Border */
+.b-none {
+  border: none;
+}
 .rad-6 {
   border-radius: 6px;
   -webkit-border-radius: 6px;
@@ -133,5 +142,13 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+.btn-shape {
+  padding: 4px 10px;
+  border-radius: 6px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
 }
 /* End Components */
