Dashboard Page - Tickets

--- a/css/framework.css
+++ b/css/framework.css
@@ -10,6 +10,9 @@
 .d-flex {
   display: flex;
 }
+.f-wrap {
+  flex-wrap: wrap;
+}
 .align-center {
   align-items: center;
 }
@@ -62,6 +65,9 @@
 .mt-20 {
   margin-top: 20px;
 }
+.mb-5 {
+  margin-bottom: 5px;
+}
 .mb-10 {
   margin-bottom: 10px;
 }
@@ -103,6 +109,9 @@
 .c-green {
   color: var(--green-color);
 }
+.c-red {
+  color: var(--red-color);
+}
 /* End Color */
 /* Start Position */
 .p-relative {
@@ -116,11 +125,17 @@
 .txt-c {
   text-align: center;
 }
+.fs-13 {
+  font-size: 13px;
+}
 .fs-14 {
   font-size: 14px;
 }
 .fs-15 {
   font-size: 15px;
+}
+.fs-25 {
+  font-size: 25px;
 }
 @media (max-width: 767px) {
   .txt-c-mobile {
