--- a/css/master.css
+++ b/css/master.css
@@ -348,3 +348,14 @@ ul {
   background-color: rgb(34 197 94 / 20%);
 }
 /* End Target */
+/* Start Tickets */
+.tickets .box {
+  border: 1px solid #ccc;
+  width: calc(50% - 10px);
+}
+@media (max-width: 767px) {
+  .tickets .box {
+    width: 100%;
+  }
+}
+/* End Tickets */
