--- a/css/framework.css
+++ b/css/framework.css
@@ -47,6 +47,9 @@
 .p-20 {
   padding: 20px;
 }
+.pb-20 {
+  padding-bottom: 20px;
+}
 .m-0 {
   margin: 0;
 }
@@ -133,6 +136,9 @@
 }
 .fs-15 {
   font-size: 15px;
+}
+.fs-16 {
+  font-size: 16px;
 }
 .fs-25 {
   font-size: 25px;
