--- a/css/master.css
+++ b/css/master.css
@@ -385,3 +385,32 @@ ul {
   }
 }
 /* End Latest News */
+/* Start Latest Tasks */
+.latest-tasks .task-row:not(:last-of-type) {
+  margin-bottom: 15px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #eee;
+}
+.latest-tasks .task-row .info {
+  flex-grow: 1;
+}
+.latest-tasks .done {
+  opacity: 0.4;
+}
+.latest-tasks .done h3,
+.latest-tasks .done p {
+  text-decoration: line-through;
+}
+.latest-tasks .task-row .delete {
+  cursor: pointer;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+.latest-tasks .task-row .delete:hover {
+  color: var(--red-color);
+}
+
+/* End Latest Tasks */
