--- a/css/framework.css
+++ b/css/framework.css
@@ -47,6 +47,12 @@
 .p-20 {
   padding: 20px;
 }
+.pt-15 {
+  padding-top: 15px;
+}
+.pb-15 {
+  padding-bottom: 15px;
+}
 .pb-20 {
   padding-bottom: 20px;
 }
