--- a/css/master.css
+++ b/css/master.css
@@ -462,6 +462,24 @@ ul {
   opacity: 0.8;
 }
 /* End Last Project Progress Widget */
+/* Start Reminders widget */
+.reminders ul li .key {
+  width: 15px;
+  height: 15px;
+}
+.reminders ul li > .blue {
+  border-left: 2px solid var(--blue-color);
+}
+.reminders ul li > .green {
+  border-left: 2px solid var(--green-color);
+}
+.reminders ul li > .orange {
+  border-left: 2px solid var(--orange-color);
+}
+.reminders ul li > .red {
+  border-left: 2px solid var(--red-color);
+}
+/* End Reminders widget */
 /* Start Animation */
 @keyframes change-color {
   from {
