--- a/css/master.css
+++ b/css/master.css
@@ -480,6 +480,44 @@ ul {
   border-left: 2px solid var(--red-color);
 }
 /* End Reminders widget */
+/* Start Latest Post */
+.latest-post .top .avatar {
+  width: 48px;
+  height: 48px;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+.latest-post .top .avatar:hover {
+  width: 53px;
+  height: 53px;
+}
+.latest-post .post-content {
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+  min-height: 140px;
+  line-height: 1.7;
+  text-transform: capitalize;
+}
+.latest-post .post-stats .hearts i {
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+.latest-post .post-stats .hearts i:hover {
+  cursor: pointer;
+  font-size: 24px;
+  color: var(--red-color);
+}
+.latest-post .post-stats .comments i:hover {
+  cursor: pointer;
+  color: var(--blue-color);
+}
+/* End Latest Post */
 /* Start Animation */
 @keyframes change-color {
   from {
