Settings Page - Site Control

--- a/css/master.css
+++ b/css/master.css
@@ -557,7 +557,6 @@ ul {
 .social-media .facebook a {
   background-color: #1877f2;
 }
-
 .social-media .youtube {
   background-color: rgb(255 0 0 / 20%);
   color: #ff0000;
@@ -623,6 +622,22 @@ ul {
 }
 /* End Projects Table */
 /* Start Settings */
+.settings-page {
+  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+}
+@media (max-width: 767px) {
+  .settings-page {
+    grid-template-columns: minmax(100px, 1fr);
+    gap: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+}
+.settings-page .close-message {
+  border: 1px solid #ccc;
+  resize: none;
+  min-height: 150px;
+}
 .toggle-checkbox {
   -webkit-appearance: none;
   appearance: none;
