--- a/css/master.css
+++ b/css/master.css
@@ -634,13 +634,17 @@ ul {
   }
 }
 .settings-page .close-message {
-  border: 1px solid #ccc;
   resize: none;
   min-height: 150px;
+}
+.settings-page .email {
+  display: inline-flex;
+  width: calc(100% - 80px);
 }
 .toggle-checkbox {
   -webkit-appearance: none;
   appearance: none;
+  display: none;
 }
 .toggle-switch {
   background-color: #ccc;
