--- a/css/master.css
+++ b/css/master.css
@@ -927,6 +927,30 @@ ul {
   -ms-border-radius: 6px;
   -o-border-radius: 6px;
 }
+.profile-page .info-box .box {
+  flex-wrap: wrap;
+  border-bottom: 1px solid #eee;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+.profile-page .info-box .box:hover {
+  background-color: #f9f9f9;
+}
+.profile-page .info-box .box > div {
+  min-width: 200px;
+  padding: 10px 0 0;
+}
+@media (max-width: 767px) {
+  .profile-page .info-box .box > div {
+    min-width: 200px;
+  }
+}
+.profile-page .info-box .box h4 {
+  font-weight: normal;
+}
 /* End Profile Page */
 /* Start Animation */
 @keyframes change-color {
