Files Page - File Card

--- a/css/framework.css
+++ b/css/framework.css
@@ -47,6 +47,9 @@
 .p-20 {
   padding: 20px;
 }
+.pt-10 {
+  padding-top: 10px;
+}
 .pt-15 {
   padding-top: 15px;
 }
@@ -158,6 +161,9 @@
 /* Start Position */
 .p-relative {
   position: relative;
+}
+.p-absolute {
+  position: absolute;
 }
 /* End Position */
 /* Start Font */
